--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Frontend Mentor | Contact form</title>
 
   <link rel="stylesheet" href="style.css">
+  <script defer src="/index.js"></script>
 
 </head>
 
 <body>
   <div class="container">
     <h3 class="tittle">Contact Us</h3>
-    <form>
+    <form id="form">
 
-      <div>
+      <div class="name__container">
         <div class="wrapper">
           <label for="firstName">First Name</label>
           <input type="text">
@@ -56,7 +57,7 @@
         <p class="required active">Please select a query type</p>
       </div>
 
-      <div class="wrapper">
+      <div class="wrapper-textarea">
         <label for="message">Message</label>
         <textarea name="message" id="message" cols="4"></textarea>
         <p class="required active">This field is required</p>
@@ -68,13 +69,18 @@
         <p class="required active">To submit this form, please consent to being contacted</p>
       </div>
 
-      <input type="button" value="Submit" class="btn">
+      <button type="submit" class="btn" id="btn">Submit</button>
     </form>
   </div>
 
-  <div>
-    <p>Message Sent!</p>
-    <p>Thanks for completing the form. We'll be in touch soon!</p>
+  <div class="modal-container" id="myModal">
+    <div class="modal-wrapper">
+      <div class="check">
+        <i class="fa-solid fa-check"></i>
+      </div>
+      <p class="modal__principal">Message Sent!</p>
+    </div>    
+    <p class="modal__text">Thanks for completing the form. We'll be in touch soon!</p>
   </div>
 
 
